syntax = "proto3";

package comment;

service CommentService {
  rpc Create(CreateReq) returns (Comment);
  rpc GetCommentsByPostId(GetByPostIdReq) returns (GetByIdCommentsRes);
  rpc GetCommentsByOwnerId(GetByOwnerIdReq) returns(GetByIdCommentsRes);
  rpc UpdateComment(UpdateCommentReq)returns(Comment);
  rpc DeleteComment(DeleteCommentReq)returns(DeleteRes);
  rpc CommentClickLike (ClickReq)returns(CommentLike);
}

message ClickReq{
  string comment_id = 1;
  string user_id = 2;
}

message CommentLike{
  bool like = 1;
}

message UpdateCommentReq{
  string comment_id = 1;
  string user_id = 2;
  string new_content = 3;
}

message DeleteCommentReq{
  string comment_id = 1;
  string user_id = 2;
}

message DeleteRes{
  bool status = 1;
}

message GetByOwnerIdReq{
  string owner_id = 1;
  int64 limit = 2;
  int64 page = 3;
}
message GetByIdCommentsRes{
  repeated Comment comments = 1;
}


message CreateReq{
  string post_id = 1;
  string user_id = 2;
  string content = 3;
  string comment_id = 4;
}

message GetByPostIdReq{
  string post_id = 1;
  int64 limit = 2;
  int64 page = 3;
}

message Comment{
  string comment_id = 1;
  string post_id = 2;
  string user_id = 3;
  string content = 4;
  int64 likes = 5;
  string created_at = 6;
  string updated_at = 7;
  string deleted_at = 8;
}